[gd_scene load_steps=6 format=3 uid="uid://cntljr72fl7i0"]

[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="1_qwtjx"]
[ext_resource type="Script" uid="uid://uekykxpm4qn6" path="res://engine/layer_panel/layer_panel.gd" id="1_vw7vn"]
[ext_resource type="PackedScene" uid="uid://cfsddu7uhkrp5" path="res://engine/layer_panel/layer_row.tscn" id="2_urqxs"]
[ext_resource type="PackedScene" uid="uid://c6hg56c7sf73m" path="res://engine/layer_panel/number_picker.tscn" id="4_45vqc"]
[ext_resource type="PackedScene" uid="uid://bj5dlw7bcynua" path="res://engine/layer_panel/rename_layer_panel.tscn" id="5_6l1ha"]

[node name="LayerPanel" type="Node2D"]
script = ExtResource("1_vw7vn")

[node name="BigPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.023
offset_right = 300.0
offset_bottom = 300.0

[node name="SmallPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.853
offset_right = 300.0
offset_bottom = 220.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.567
offset_right = 300.0
offset_bottom = 220.0
horizontal_scroll_mode = 0

[node name="RowHolder" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(292, 220)
layout_mode = 2

[node name="LayerRow" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="LayerRow2" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="LayerRow3" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="LayerRow4" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="LayerRow5" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="NewButton" type="Button" parent="."]
anchors_preset = -1
anchor_top = 0.885
anchor_right = 0.211
anchor_bottom = 0.991
offset_left = 15.0
offset_top = 235.0
offset_right = 140.0
offset_bottom = 285.0
theme = ExtResource("1_qwtjx")
theme_override_font_sizes/font_size = 16
text = "Add Layer"

[node name="DeleteButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.789
anchor_top = 0.885
anchor_right = 0.951
anchor_bottom = 1.0
offset_left = 160.0
offset_top = 235.0
offset_right = 285.0
offset_bottom = 285.0
theme = ExtResource("1_qwtjx")
theme_override_font_sizes/font_size = 16
text = "Delete Layer"

[node name="LayerSettingsPopup" type="PopupPanel" parent="."]
size = Vector2i(308, 112)
max_size = Vector2i(308, 112)

[node name="RotationPicker" parent="LayerSettingsPopup" instance=ExtResource("4_45vqc")]
position = Vector2(4, 4)

[node name="DepthPicker" parent="LayerSettingsPopup" instance=ExtResource("4_45vqc")]
position = Vector2(4, 58)

[node name="NewLayerNamePopup" type="PopupPanel" parent="."]
auto_translate_mode = 1
size = Vector2i(380, 64)
max_size = Vector2i(380, 64)

[node name="RenameLayerPanel" parent="NewLayerNamePopup" instance=ExtResource("5_6l1ha")]
